minifix z-indexing correctly

--- a/src/styles/itemModal.css
+++ b/src/styles/itemModal.css
@@ -3,6 +3,7 @@
 /*////////// Modal Overlay ///////*/
 .itemModal .modalOverlay {
   position: fixed;
+  z-index: 9999;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); /* Centering trick */
@@ -250,7 +251,7 @@
     height: 50px;
   }
   .itemModal .top-thumbnail .close {
-    left: 5%;
+    left: 89%;
     top: -103%;
   }
   .itemModal .top-thumbnail h1 {
